--- a/Assignment 1/1080613.tex
+++ b/Assignment 1/1080613.tex
@@ -30,5 +30,5 @@ In the generating the physical model the following assumptions were made:
     \item A 2,500 word statement can be stored in 30,000 characters and a 300 word statement in 4,500 characters.
 \end{itemize}
 \includepdf[fitpaper=true]{logical-design.png}
-\includepdf[fitpaper=true]{physical-design.png}
+\includepdf[fitpaper=true]{physical-design-2.png}
 \end{document}
